--- a/Ableism/Base.lproj/Main.storyboard
+++ b/Ableism/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12106.1" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="wBZ-xU-xQ5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12106.1" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,104 +9,117 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Login View Controller-->
+        <scene sceneID="0Ys-tN-ijc">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Fz0-Bm-XTl" customClass="LoginViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="wIk-MT-F1F"/>
+                        <viewControllerLayoutGuide type="bottom" id="kYF-Ck-aK7"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="43A-cj-New">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="ZqR-6H-pi7" kind="show" id="0IS-aC-zVC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZCh-x6-Zb4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1406" y="-994"/>
+        </scene>
+        <!--Add Location View Controller-->
+        <scene sceneID="ShM-Y9-LcH">
+            <objects>
+                <viewController id="YVv-9L-8nA" customClass="AddLocationViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6Xp-gl-c8Q"/>
+                        <viewControllerLayoutGuide type="bottom" id="ORO-Yl-ftE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9ng-dg-IBs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tlr-a3-f2M">
-                                <rect key="frame" x="0.0" y="159" width="375" height="508"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="weB-vg-aqc"/>
-                                </connections>
-                            </mapView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N3P-BY-Cfx">
-                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1mo-rG-tiF">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Gy8-2a-v6U"/>
-                    <connections>
-                        <outlet property="mapView" destination="Tlr-a3-f2M" id="ngr-MI-DKr"/>
-                        <outlet property="searchBar" destination="N3P-BY-Cfx" id="007-fC-sRY"/>
-                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="maW-Uy-905" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="967.20000000000005" y="-993.55322338830592"/>
+            <point key="canvasLocation" x="-817" y="5"/>
         </scene>
-        <!--Location Search Table-->
-        <scene sceneID="EeX-qT-LZn">
+        <!--List-->
+        <scene sceneID="GvZ-xq-XXz">
             <objects>
-                <tableViewController storyboardIdentifier="LocationSearchTable" id="diz-RM-oDY" customClass="LocationSearchTable" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="To1-GY-A3j">
+                <viewController id="ijd-B0-E8m" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TWD-fe-zEl"/>
+                        <viewControllerLayoutGuide type="bottom" id="H0J-nI-T8h"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ptd-Py-c8I">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="sGR-D3-eWG" detailTextLabel="6bd-Ya-AUB" style="IBUITableViewCellStyleSubtitle" id="FQX-Vh-VEm">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FQX-Vh-VEm" id="mGL-Ww-DFi">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sGR-D3-eWG">
-                                            <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6bd-Ya-AUB">
-                                            <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="diz-RM-oDY" id="JUg-B8-jh4"/>
-                            <outlet property="delegate" destination="diz-RM-oDY" id="588-wU-i6O"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lhd-bA-g6i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="List" image="listbullets.png" id="aMI-UQ-zA6"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pSh-De-9sX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1656.8" y="-994.45277361319347"/>
+            <point key="canvasLocation" x="174" y="-416"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="hEs-HJ-cyZ">
+        <!--Find-->
+        <scene sceneID="hG9-mF-jXV">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wBZ-xU-xQ5" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9To-Nx-QO2">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="cwo-2B-9TS"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aam-qM-Eva" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="bLD-LW-W9u" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fan-qY-YFV"/>
+                        <viewControllerLayoutGuide type="bottom" id="s2h-Sr-HE2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4AB-6U-qAi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="58a-7V-O4F">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Find" image="map.png" id="Iz9-Ec-Bvp"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Zv-xq-1C5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="201" y="-994"/>
+            <point key="canvasLocation" x="173.59999999999999" y="-1123.088455772114"/>
+        </scene>
+        <!--Tab Bar View Controller-->
+        <scene sceneID="yhU-dw-kWd">
+            <objects>
+                <tabBarController id="ZqR-6H-pi7" customClass="TabBarViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="O4o-GE-S8t">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="bLD-LW-W9u" kind="relationship" relationship="viewControllers" id="z9n-4K-5Aj"/>
+                        <segue destination="ijd-B0-E8m" kind="relationship" relationship="viewControllers" id="B8R-r4-Ljy"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nLc-aO-hHf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-753" y="-994"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="listbullets.png" width="24" height="24"/>
+        <image name="map.png" width="24" height="24"/>
+    </resources>
 </document>
