--- a/Ableism/Base.lproj/Main.storyboard
+++ b/Ableism/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12106.1" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Fz0-Bm-XTl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12106.1" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ELh-bl-VhJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,167 +9,69 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Login View Controller-->
-        <scene sceneID="0Ys-tN-ijc">
+        <!--List-->
+        <scene sceneID="RkB-vK-rHn">
             <objects>
-                <viewController id="Fz0-Bm-XTl" customClass="LoginViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="nGn-ST-nHU" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="wIk-MT-F1F"/>
-                        <viewControllerLayoutGuide type="bottom" id="kYF-Ck-aK7"/>
+                        <viewControllerLayoutGuide type="top" id="4gY-m5-dLw"/>
+                        <viewControllerLayoutGuide type="bottom" id="HyX-Of-Pdn"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="43A-cj-New">
+                    <view key="view" contentMode="scaleToFill" id="yCI-Ku-vhV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <connections>
-                        <segue destination="ZqR-6H-pi7" kind="show" id="0IS-aC-zVC"/>
-                    </connections>
+                    <tabBarItem key="tabBarItem" title="List" image="listbullets.png" id="0la-0x-NIp"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZCh-x6-Zb4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ORA-rC-m3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1406" y="-994"/>
-        </scene>
-        <!--Add Location View Controller-->
-        <scene sceneID="ShM-Y9-LcH">
-            <objects>
-                <viewController id="YVv-9L-8nA" customClass="AddLocationViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="6Xp-gl-c8Q"/>
-                        <viewControllerLayoutGuide type="bottom" id="ORO-Yl-ftE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="9ng-dg-IBs">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1mo-rG-tiF">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="maW-Uy-905" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-860" y="-221"/>
-        </scene>
-        <!--Local Users-->
-        <scene sceneID="ob8-yO-7M7">
-            <objects>
-                <tableViewController id="77M-jx-RPw" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="im6-NE-2hp">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="j4y-Dt-Rsv">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="j4y-Dt-Rsv" id="SiH-MV-mgi">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="77M-jx-RPw" id="I91-Jg-fIb"/>
-                            <outlet property="delegate" destination="77M-jx-RPw" id="bIY-8z-A0Z"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="Local Users" image="user.png" id="aoQ-BO-rqB"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gBT-mK-H7b" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="9" y="-220"/>
+            <point key="canvasLocation" x="-615" y="-508"/>
         </scene>
         <!--Find-->
-        <scene sceneID="hG9-mF-jXV">
+        <scene sceneID="VqR-7h-ACw">
             <objects>
-                <viewController id="bLD-LW-W9u" customClass="FindViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="qdv-Kr-UJY" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="fan-qY-YFV"/>
-                        <viewControllerLayoutGuide type="bottom" id="s2h-Sr-HE2"/>
+                        <viewControllerLayoutGuide type="top" id="dlK-9k-IyH"/>
+                        <viewControllerLayoutGuide type="bottom" id="307-x4-Ore"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="4AB-6U-qAi">
+                    <view key="view" contentMode="scaleToFill" id="gE6-ia-9GM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="58a-7V-O4F">
-                                <rect key="frame" x="0.0" y="44" width="375" height="574"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </mapView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ey5-Fn-Jvf">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Title" id="EXy-sf-qqQ">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="B1X-nJ-1hl"/>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Find" image="map.png" id="Iz9-Ec-Bvp"/>
+                    <tabBarItem key="tabBarItem" title="Find" image="map.png" id="4cm-70-pIq"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1Zv-xq-1C5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0tF-7X-fEi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8.8000000000000007" y="-1585.4572713643179"/>
+            <point key="canvasLocation" x="-614" y="-1230"/>
         </scene>
         <!--Tab Bar View Controller-->
-        <scene sceneID="yhU-dw-kWd">
+        <scene sceneID="BLL-ja-ww8">
             <objects>
-                <tabBarController id="ZqR-6H-pi7" customClass="TabBarViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="O4o-GE-S8t">
+                <tabBarController storyboardIdentifier="TabBarViewController" id="ELh-bl-VhJ" customClass="TabBarViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="5lh-hD-6hY">
+                        <nil key="title"/>
+                        <barButtonItem key="leftBarButtonItem" title="LOGOUT" id="3A3-jW-9EP"/>
+                    </navigationItem>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Xab-Jb-7Zx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="bLD-LW-W9u" kind="relationship" relationship="viewControllers" id="z9n-4K-5Aj"/>
-                        <segue destination="HOv-HR-Coo" kind="relationship" relationship="viewControllers" id="GXC-oh-CPd"/>
-                        <segue destination="77M-jx-RPw" kind="relationship" relationship="viewControllers" id="hHB-r2-Hga"/>
+                        <segue destination="qdv-Kr-UJY" kind="relationship" relationship="viewControllers" id="VhL-u2-KpA"/>
+                        <segue destination="nGn-ST-nHU" kind="relationship" relationship="viewControllers" id="Cms-Dc-lRZ"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nLc-aO-hHf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5h1-0g-TPH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-753" y="-994"/>
-        </scene>
-        <!--List-->
-        <scene sceneID="OrE-jY-wW9">
-            <objects>
-                <tableViewController id="HOv-HR-Coo" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="VUa-0N-f76">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="0Df-CS-V1D">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0Df-CS-V1D" id="z2f-X2-mfN">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="HOv-HR-Coo" id="PhW-jG-BgZ"/>
-                            <outlet property="delegate" destination="HOv-HR-Coo" id="YFC-T3-GQj"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="List" image="listbullets.png" id="4gi-3d-eIK"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qiv-ie-qnC" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="9" y="-899"/>
+            <point key="canvasLocation" x="-1546" y="-1012"/>
         </scene>
     </scenes>
     <resources>
         <image name="listbullets.png" width="24" height="24"/>
         <image name="map.png" width="24" height="24"/>
-        <image name="user.png" width="24" height="24"/>
     </resources>
 </document>
